test/rebar_edoc_SUITE_data/bad/apps/bad_bar1/src/bad_bar1_sup.erl
%%%-------------------------------------------------------------------
%% @doc bar1 top level supervisor.
%% @end
%%%-------------------------------------------------------------------

-module(bad_bar1_sup).

-behaviour(supervisor).

%% API
-export([start_link/0]).

%% Supervisor callbacks
-export([init/1]).

-define(SERVER, ?MODULE).

%%====================================================================
%% API functions
%%====================================================================

start_link() ->
    supervisor:start_link({local, ?SERVER}, ?MODULE, []).

%%====================================================================
%% Supervisor callbacks
%%====================================================================

%% Child :: {Id,StartFunc,Restart,Shutdown,Type,Modules}
init([]) ->
    {ok, { {one_for_all, 0, 1}, []} }.

%%====================================================================
%% Internal functions
%%====================================================================
